--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -165,9 +165,7 @@
     justify-content: center;
     align-items: center;
 }
-:root {
-    --white: rgb(215, 215, 215);
-}
+
 html {
     font-size: 12px;
     line-break: loose;
@@ -1402,9 +1400,10 @@ body {
     border-radius: 0.5rem;
     color: var(--TC);
     font-weight: var(--FW_B);
+    font-size: var(--FS_N);
     transition: var(--T_UF);
     &:hover {
-        color: var(--white);
+        color: var(--whiteOff);
     }
 }
 .link_btn {
@@ -2167,9 +2166,10 @@ body {
     }
 }
 .skills_section {
+    --iconD: 6rem;
     .icon_container {
-        height: 6rem;
-        width: 6rem;
+        height: var(--iconD);
+        width: var(--iconD);
     }
 }
 .services_container {
@@ -2240,12 +2240,8 @@ body {
 }
 .legals_section {
     background: var(--NVC);
-    .footer_content {
-        @include flex(row, space-between, flex-end);
-    }
-
+    .footer_content,
     .lebels_container {
-        margin-top: 1rem;
         @include flex(row, space-between, flex-end);
     }
     .social_btns_container {
@@ -2272,6 +2268,9 @@ body {
         margin-left: 3rem;
         .btns_container :not(:first-child) {
             margin-left: 2rem;
+        }
+        .label_btn {
+            font-size: var(--FS_S);
         }
     }
 }
