--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1672,6 +1672,14 @@ body {
     transform: translateY(4rem);
     transition: var(--T_M);
 }
+.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+.open_modal {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+}
 
 .btn_active {
     background: var(--FC) !important;
